# bupt-netaccount-transfer-service

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  _paths.sh  pyproject.toml  run_a.sh  run_b.sh  run_test_local.sh  run_test_seperate.sh
gateway/: server.py  tcp_forward.py
local/: _otp_addon.py  mitm_capture.py
server/: atrust_setup.py  otp_poller.py  record_popup.py
shared/: _env.ps1  _link.py  _paths.py  _runner.sh  _spawn.py
